test-data/invalid/translate-invalid-child.jsx
const Test = () => (
    <Translate>
        {...foo}
    </Translate>
);
